changed to move spring boot from version 3.5.5 to version 4.0.3